histogram version working

--- a/HZZAnalysis.ipynb
+++ b/HZZAnalysis.ipynb
@@ -1581,7 +1581,7 @@
     "        # Loop over data in the tree\n",
     "        for data in tree.iterate(variables + weight_variables + [\"sum_of_weights\", \"lep_n\"],\n",
     "                                 library=\"ak\",\n",
-    "                                 entry_stop=tree.num_entries*fraction#):#, # process up to numevents*fraction\n",
+    "                                 entry_stop=tree.num_entries*fraction):#, # process up to numevents*fraction\n",
     "                                #  step_size = 10000000):\n",
     "\n",
     "            # Number of events in this batch\n",
